# BIOS

./: .gitignore  CMakeLists.txt  build.sh  configure.sh  run.sh  text.data
res/levels/: level_00.lvl  level_01.lvl  level_02.lvl  level_03.lvl
res/models/: robot_menu.mtl
shaders/: color_fs.shader  color_vs.shader  multiple_lights_fs.shader  multiple_lights_vs.shader
src/: app.cpp  app.h  audio.cpp  audio.h  box_collider.cpp  box_collider.h  camera.cpp  camera.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  object.cpp  object.h  olcPixelGameEngine.cpp  player.cpp  player.h  renderer.cpp  renderer.h  shader.cpp  shader.h  world.cpp  world.h
